--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
 title: Mood Music Study
 description: Researching the relationship between music and mood.
 show_downloads: false
-theme: minima
-description: Information about the Mood Music Study.
-author:
-  name: Nina Di Cara
-  email: nina.dicara@bristol.ac.uk
+remote_theme: pages-themes/cayman@v0.2.0
+description: Instructions for participating in the Mood Music Study.
